# uv_festival

./: 01_test.ipynb  Poster_NameOnly_DynamicPrompt.ipynb  category.ipynb  category_period.ipynb  detail.ipynb  festival_poster_prompt_builder.ipynb  instagram.ipynb  main.py  pattern.ipynb  pdf_tools.ipynb  poster_trend_template_v1.ipynb  pyproject.toml  quarter.ipynb  season.ipynb
csv/: 2024.csv  2024_rebuilt.csv  2025_rebuilt.csv  festival_subcategory_summary_ge5.csv  세부분류_연도별_집계_user_schema.csv  축제_핵심필드.csv
