[project]
name = "uv-festival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- 크롤링 관련 ---
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    # --- YouTube API ---
    "google-api-python-client>=2.156.0",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    # --- 환경 변수 관리 ---
    "python-dotenv>=1.0.1",
    # --- LangChain / LangGraph 관련 ---
    "langchain>=0.3.13",
    "langchain-core>=0.3.56",
    "langchain-community>=0.3.13",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.9",
    "langgraph-sdk>=0.1.48",
    # --- 임베딩/DB/유틸 ---
    "chromadb>=0.5.23",
    "tiktoken>=0.8.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    # --- 웹/앱 프레임워크 (FastAPI + Streamlit) ---
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "streamlit>=1.43.0",
    # --- 기타 필요 라이브러리 ---
    "matplotlib-inline>=0.1.7",
    "nltk>=3.9.1",
    "yfinance>=0.2.51",
    "pytrends>=4.9.2",
    "pymupdf>=1.26.5",
]
